Agregando contenido en el html y corrigiendo un error

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <H1>Aprendiendo GIT</H1>
     <p>
         Mis primeros pasos en el versionado de codigo
+        corrigiendo error
     </p>
     
 </body>
