Agregando index.js al index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 <body>
     <H1>Aprendiendo GIT</H1>
-    <p>
-        Mis primeros pasos en el versionado de codigo
-        corrigiendo error
-    </p>
+    <p>Mis primeros pasos en el versionado de codigo , escrito desde la rama html</p>
+    <ol>
+        <li>elemento 1</li>
+        <li>elemento 2</li>
+        <li>elemento 3</li>
+        <li>elemento 4</li>
+        <li>elemento 5</li>
+    </ol>
+    <script src = "index.js"></script>
     
 </body>
 </html>
