--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
         <li>Elemento 5</li>
     </ul>
     <ol>
-<<<<<<< HEAD
         <li>Primavera - 21 marzo </li>
         <li>Verano - 21 jullio</li>
         <li>Otoño - 21 septiembre</li>
         <li>Invierno - 21 diciembre</li>
-=======
-        <li>Primavera</li>
-        <li>Verano</li>
-        <li>Otoño</li>
-        <li>Invierno</li>
->>>>>>> e69de98a59f8d39b5ea704101580746fcbfd0d8c
     </ol>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, inventore eveniet architecto facilis culpa minus necessitatibus exercitationem fugit atque ad dicta pariatur aliquid deserunt? Odio accusantium iure quos consectetur dolor.
+    </p>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatum dolorem a, doloremque accusamus officiis eos excepturi incidunt laborum. At beatae libero modi dolore earum iusto eligendi similique, eveniet omnis?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima accusamus, delectus deserunt hic fugit temporibus, ducimus tempora, ut recusandae deleniti voluptatibus placeat itaque. Dolorem cumque voluptates ex corporis laudantium?
+    </p>
     <script src = "index.js"></script>
     
 </body>
