Agregando imagen de flujo git y mejorando visualmente el index.html

--- a/index.html
+++ b/index.html
@@ -4,33 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo GIT</title>
+    <link rel="stylesheet" href ="style.css" />
 </head>
 <body>
     <H1>Aprendiendo GIT</H1>
-    <p>Mis primeros pasos en el versionado de codigo y aprendiedno a resolver conflictos</p>
-    <ul>
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento 3</li>
-        <li>Elemento 4</li>
-        <li>Elemento 5</li>
-    </ul>
-    <ol>
-        <li>Primavera - 21 marzo </li>
-        <li>Verano - 21 jullio</li>
-        <li>Otoño - 21 septiembre</li>
-        <li>Invierno - 21 diciembre</li>
-    </ol>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, inventore eveniet architecto facilis culpa minus necessitatibus exercitationem fugit atque ad dicta pariatur aliquid deserunt? Odio accusantium iure quos consectetur dolor.
+    <p>Mis primeros pasos en el versionado de codigo y aprendiedno a resolver conflictos
     </p>
     <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatum dolorem a, doloremque accusamus officiis eos excepturi incidunt laborum. At beatae libero modi dolore earum iusto eligendi similique, eveniet omnis?
+        Quieres dominar el uso de git? mira este <a href="https://www.youtube.com/watch?v=suzMNqDQiyU&t=10960s" target="_blank"</a>enlace</a>
     </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima accusamus, delectus deserunt hic fugit temporibus, ducimus tempora, ut recusandae deleniti voluptatibus placeat itaque. Dolorem cumque voluptates ex corporis laudantium?
-    </p>
+    <img src="025.png" alt="Pikachu">
     <script src = "index.js"></script>
-    
 </body>
 </html>
